--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,9 +4,46 @@
   переключая тему
 */
 
-.page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
+/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+.page.theme_dark {
+  --accent-font: 'IBM Plex mono';
+  --bg-color: #000028; /* Цвет фона Dark*/  
+  --nav-color: #FF0070; /* Цвет навигации кнопок */
+  --rec-color: #FF0070; /* Цвет эл. REC */
+  --title-color: #DB00FF; /* Цвет Заголовка */
+  --subtitle-color: #FF0070; /* Цвет Подзаголовков */
+  --subtitle-main-color: #000028; /* Цвет ПодПодзаголовков */
+  --accent-color: #FF0070; /* Цвет фона под текстом */  
+  --text-color: #F1B2CE; /* Цвет основного текста */
+  --bg-image: url(../images/cover-image-dark.png);   
+  --font-size: 18px;
+  --outline-button: #FF0070; /* Обводка кнопки */
 }
+
+@media (prefers-color-scheme: dark) {
+  
+  .page {
+    --bg-image: url(../images/cover-image-dark.png); 
+  }
+
+  :root {
+    --accent-font: 'IBM Plex mono';
+    --bg-color: #000028; /* Цвет фона Dark*/  
+    --nav-color: #FF0070; /* Цвет навигации кнопок */
+    --rec-color: #FF0070; /* Цвет эл. REC */
+    --title-color: #DB00FF; /* Цвет Заголовка */
+    --subtitle-color: #FF0070; /* Цвет Подзаголовков */
+    --subtitle-main-color: #000028; /* Цвет ПодПодзаголовков */
+    --accent-color: #FF0070; /* Цвет фона под текстом */  
+    --text-color: #F1B2CE; /* Цвет основного текста */
+    --bg-image: url(../images/cover-image-dark.png);   
+    --font-size: 18px;
+    --outline-button: #FF0070; /* Обводка кнопки */
+  }
+}
+  
+
