--- a/styles/light.css
+++ b/styles/light.css
@@ -4,9 +4,43 @@
   переключая тему
 */
 
-.page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
+/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+.page.theme_light {
+  --accent-font: 'IBM Plex mono';
+  --bg-color: #FFC2E6; /* Цвет фона Light*/  
+  --nav-color: #353430; /* Цвет навигации кнопок */
+  --title-color: #FFC2E6; /* Цвет Заголовка */
+  --subtitle-color: #353430; /* Цвет Подзаголовков */
+  --subtitle-main-color: #353430; /* Цвет ПодПодзаголовков */
+  --accent-color: #FF8DCB; /* Цвет фона под текстом */  
+  --text-color: #353430; /* Цвет основного текста */
+  --bg-image: url(../images/cover-image-light.png);   
+  --font-size: 18px;
+  --outline-button: #353430; /* Обводка кнопки */
+  --rec-color: #fff1f7;
+}
+
+@media (prefers-color-scheme: light) {
+
+  .page {
+    --bg-image: url(../images/cover-image-light.png); 
+  }
+
+  :root {
+    --accent-font: 'IBM Plex mono';
+    --bg-color: #FFC2E6; /* Цвет фона Light*/  
+    --nav-color: #353430; /* Цвет навигации кнопок */
+    --title-color: #FFC2E6; /* Цвет Заголовка */
+    --subtitle-color: #353430; /* Цвет Подзаголовков */
+    --subtitle-main-color: #353430; /* Цвет ПодПодзаголовков */
+    --accent-color: #FF8DCB; /* Цвет фона под текстом */  
+    --text-color: #353430; /* Цвет основного текста */      
+    --font-size: 18px; 
+    --outline-button: #353430; /* Обводка кнопки */ 
+    --rec-color: #fff1f7;
+  }
 }
