--- a/styles/style.css
+++ b/styles/style.css
@@ -136,6 +136,26 @@
   max-inline-size: 355px; /* Размер блока */
 }
 
+.text_shadow:hover {
+  border-block-end: 1px solid var(--focus-color);  /* Подчеркивание текста */
+}
+
+.text_shadow:focus {
+  outline: 1px solid var(--focus-color);
+}
+
+.header__theme-menu-button:hover {
+	border: 1px solid var(--hover-color);
+}
+
+.header__theme-menu-button:focus {
+	outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+	border-block-end: 1px solid var(--border-color);
+}
+
 /* ########################################## */
 /* ########################################## */
             /* Блок Header Конец */
@@ -146,7 +166,7 @@
 
 /* ########################################## /*
 /* ########################################## /*
-            /* 1. Блок Main Начало */
+            /* 2. Блок Main Начало */
 /* ########################################## */
 /* ########################################## */
 
@@ -238,7 +258,7 @@
 
 /* ########################################## */
 /* ########################################## */
-            /* Блок Footer Конец */
+            /* 3. Блок Footer Конец */
 /* ########################################## */
 /* ########################################## */
 
@@ -246,7 +266,7 @@
 
 /* ########################################## */
 /* ########################################## */
-            /* Медиазапросы */
+            /* 4. Медиазапросы */
 /* ########################################## */
 /* ########################################## */
 
@@ -501,10 +521,9 @@
   .content__picture {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     grid-column-gap: 20px;
-    grid-row-gap: 20px;   
-    max-height: 780px;
+    grid-row-gap: 20px;       
     margin-inline: 0;
     margin-block-start: 20px;    
   }
@@ -523,6 +542,13 @@
 
   /* Блок Main Конец */
 
+  .footer {
+    margin-block-start: 60px;
+  }
+
+  .footer_title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 
   /* Блок Footer Конец */
 
