--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,4 +15,7 @@
   --bg-image: url(../images/cover-image-dark.png);   
   --font-size: 18px;
   --outline-button: #FF0070; /* Обводка кнопки */
+  --focus-color: #f1b2ce;
+  --hover-color: rgba(255, 0, 112, 0.4);
+  --border-color: #ff0070;
 }
