--- a/styles/style.css
+++ b/styles/style.css
@@ -19,11 +19,11 @@
   background-attachment: fixed;
 }
 
-/* ########################################## /*
+
 /* ########################################## /*
             /* 1. Блок Header Начало */
 /* ########################################## */
-/* ########################################## */
+
 
 .header { 
   inset: 0;
@@ -156,19 +156,16 @@
 	border-block-end: 1px solid var(--border-color);
 }
 
-/* ########################################## */
+
 /* ########################################## */
             /* Блок Header Конец */
 /* ########################################## */
-/* ########################################## */
 
 
-
-/* ########################################## /*
 /* ########################################## /*
             /* 2. Блок Main Начало */
 /* ########################################## */
-/* ########################################## */
+
 
 .content__title { 
   margin-inline: 10px;
@@ -224,19 +221,16 @@
   margin-block-start: 50px;
 }
 
-/* ########################################## */
+
 /* ########################################## */
             /* Блок Main Конец */
 /* ########################################## */
-/* ########################################## */
 
 
-
-/* ########################################## */
 /* ########################################## */
             /* Блок Footer Начало */
 /* ########################################## */
-/* ########################################## */
+
 
 .footer {
   position: relative;
@@ -256,18 +250,14 @@
   text-shadow: 2px 2px 0 var(--accent-color);   
 }
 
-/* ########################################## */
+
 /* ########################################## */
             /* 3. Блок Footer Конец */
 /* ########################################## */
-/* ########################################## */
 
 
-
-/* ########################################## */
 /* ########################################## */
             /* 4. Медиазапросы */
-/* ########################################## */
 /* ########################################## */
 
 
@@ -295,6 +285,7 @@
 
   .header__theme-menu-list {
     margin-inline-end: 10px;
+    margin-block-start: 10px;
   } 
 
   .header__title {
@@ -304,7 +295,7 @@
 
   .header__paragraph { 
     margin-inline-end: 20px; 
-    margin-block-end: 30px;   
+    margin-block-end: 25px;   
     max-inline-size: 364px;
   }
   
@@ -312,13 +303,11 @@
     margin-inline: 20px;
   }
 
-  /* Блок Header Конец */
-
   .section-one {
     display: grid;
-    grid-template-columns: 1fr 2fr;    
-    gap: 20px;
-    margin-block-start: 55px;               
+    grid-template-columns: auto 2fr;    
+    column-gap: 10px;
+    margin-block-start: 60px;               
   }
 
   .text_card-column {
@@ -338,13 +327,11 @@
 
   .section__text {
     margin-inline: 0;
-    margin-block-start: 0;
+    margin-block: 0 20px;
   }
 
-  .section-two {
-    display: grid;
-    gap: 20px; 
-    margin-block-start: 80px;
+  .section__title-two {
+    margin-block: 60px 20px;
   }
 
   .section-three {
@@ -364,7 +351,7 @@
   }
 
   .section-four {    
-    margin-block-start: 80px;
+    margin-block-start: 60px;
   }
 
   .content__picture {
@@ -379,23 +366,19 @@
 
   .content__picture-image {
     object-fit: cover;
-		inline-size: 100%;
-		block-size: 100%;
+    inline-size: 100%;
+		block-size: 100%;		
   }
 
   .sunset { grid-area: 1 / 1 / 2 / 3; }
   .ice-cream { grid-area: 1 / 3 / 3 / 4; }
   .tape { grid-area: 2 / 1 / 4 / 2; }
   .books { grid-area: 2 / 2 / 3 / 3; }
-  .street { grid-area: 3 / 2 / 4 / 4; }
-
-  /* Блок Main Конец */
+  .street { grid-area: 3 / 2 / 4 / 4; }  
 
   .footer {
     margin-block-start: 60px;
-  }
-
-  /* Блок Footer Конец */
+  }  
 }
 
 @media (width >= 1024px) {
@@ -409,24 +392,21 @@
   .header__theme-menu-list {
     flex-direction: row;
     justify-content: center;
+    margin-block-start: 0;
     padding-inline-start: 10px;
   } 
 
-  .header__paragraph { 
-    margin-inline-end: 20px;
+  .header__paragraph {     
     margin-block-end: 20px;    
     max-inline-size: 491px;
   }
 
   .section-one {
-    display: grid;
-    grid-template-columns: auto 2fr;    
-    gap: 20px;
-    margin-block-start: 60px;               
+    column-gap: 20px;
+    margin-block-end: 60px;
   }
 
-  .text_card-column {
-    grid-column-start: 2; 
+  .text_card-column {     
     padding-inline-start: 35px;   
   }
 
@@ -435,28 +415,20 @@
     max-inline-size: 315px;
   }
 
-  .section-two {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(315px, 1fr));
-    grid-template-rows: repeat(3, auto);
-    gap: 20px; 
-    margin-inline: 20px; 
-    margin-block-start: 80px;      
-  }
-
   .section__title-one {
     margin-inline-end: 0;
   }
 
   .text_card-column-two {
-    grid-row-start: 2;
-    max-inline-size: 315px;    
+    display: grid;  
+    grid-template-columns: repeat(3, 1fr);    
+    grid-auto-columns: 1fr;
+    gap: 20px;
+    margin-block-start: 20px;
   }
   
-  .section-three {
-    display: grid;
-    grid-template-columns: auto 2fr;
-    gap: 20px;  
+  .section-three {    
+    gap: 10px;  
     margin-block-start: 60px;
   }
 
