--- a/styles/style.css
+++ b/styles/style.css
@@ -1,51 +1,49 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 
-/* 1. Блок Header  */ 
+/* 1. Блок Header  */
 /* 2. Блок Main   */
 /* 3. Блок Footer  */
 /* 4. Медиазапросы */
 
 .page {
   min-width: 375px;
-  color: var(--text-color, #F1B2CE);
+  color: var(--text-color, #f1b2ce);
   font-family: var(--accent-font), serif;
   font-size: var(--font-size);
   background-color: var(--bg-color);
-  background-image: var(--bg-image);  
+  background-image: var(--bg-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
 
-
 /* ########################################## /*
         /* 1. Блок Header Начало */
 /* ########################################## */
 
-
-.header { 
+.header {
   inset: 0;
-  display: grid;  
-  grid-template-rows: 1fr auto 1fr;    
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
   min-block-size: 668px;
   block-size: 100vh;
 }
 
 .decorated-zone::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 25px; /* Ширина полоски */
   height: 25px; /* Высота полоски */
   border-inline-end: 1px solid var(--nav-color);
   border-block-start: 1px solid var(--nav-color);
   inset-block-start: 10px;
-  inset-inline-end: 10px;  
+  inset-inline-end: 10px;
 }
 
 .decorated-zone::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 25px; /* Ширина полоски */
   height: 25px; /* Высота полоски */
@@ -55,18 +53,18 @@
   inset-inline-start: 10px;
 }
 
-.header__record_element {  
+.header__record_element {
   position: absolute;
   color: var(--rec-color);
   font-weight: 400;
   font-size: var(--font-size);
   line-height: 25px;
   inset-block-start: 10px;
-  inset-inline-end: 38px; 
+  inset-inline-end: 38px;
 }
 
 .header__record_element::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 9px;
   height: 9px;
@@ -74,41 +72,41 @@
   box-shadow: 0px 0px 4px 2px var(--rec-color);
   background-color: var(--rec-color);
   inset-block-start: 8px;
-  inset-inline-end: -19px;  
+  inset-inline-end: -19px;
 }
 
 .header__theme-menu {
-  display: flex; 
+  display: flex;
   justify-content: end;
   align-self: center;
   margin: 10px 10px 0 10px;
 }
 
-.header__theme-menu-list {  
+.header__theme-menu-list {
   display: flex;
-  flex-direction: column;  
-  gap: 10px;  /* Отступ между кнопками */
+  flex-direction: column;
+  gap: 10px; /* Отступ между кнопками */
   margin-inline-end: 0;
 }
 
 .header__theme-menu-button {
   min-width: 70px;
   min-height: 26px;
-  border: none;  
+  border: none;
   color: var(--nav-color);
   font-weight: normal;
   line-height: 18px;
-  text-align: center;  
-  background-color: transparent; 
-  cursor: pointer; /* Добавил курсор при наведении на кнопку */  
+  text-align: center;
+  background-color: transparent;
+  cursor: pointer; /* Добавил курсор при наведении на кнопку */
 }
 
 .header__theme-menu-button_active {
   border: 1px solid var(--outline-button);
-  pointer-events: none; /* Убрал курсор при наведении на кнопку */  
+  pointer-events: none; /* Убрал курсор при наведении на кнопку */
 }
 
-.header__title {  
+.header__title {
   padding-inline-start: 10px; /* Отступ слева */
   padding-inline-end: 10px;
   color: var(--title-color);
@@ -119,7 +117,7 @@
   text-shadow: 4px 4px 0 var(--accent-color); /* Стиль Тени для Заголовка */
 }
 
-.title-decor { 
+.title-decor {
   color: var(--subtitle-main-color);
   font-family: var(--accent-font, sans-serif);
   font-weight: 700;
@@ -132,12 +130,12 @@
   justify-self: flex-end; /* Оступ справа */
   align-self: center; /* Расположение по центру */
   margin-inline-end: 10px; /* Отступ справа */
-  margin-block-end: 10px;  /* Оступ снизу */
+  margin-block-end: 10px; /* Оступ снизу */
   max-inline-size: 355px; /* Размер блока */
 }
 
 .text_shadow:hover {
-  border-block-end: 1px solid var(--focus-color);  /* Подчеркивание текста */
+  border-block-end: 1px solid var(--focus-color); /* Подчеркивание текста */
 }
 
 .text_shadow:focus {
@@ -156,22 +154,19 @@
   border-block-end: 1px solid var(--border-color);
 }
 
-
 /* ########################################## */
-        /* Блок Header Конец */
+/* Блок Header Конец */
 /* ########################################## */
-
 
 /* ########################################## /*
         /* 2. Блок Main Начало */
 /* ########################################## */
 
-
-.content__title { 
+.content__title {
   margin-inline: 10px;
-  margin-block-start: 50px;  
+  margin-block-start: 50px;
   color: var(--subtitle-color);
-  font-size: var(--font-size); 
+  font-size: var(--font-size);
   line-height: 23.4px;
 }
 
@@ -180,18 +175,18 @@
 }
 
 .subtitle {
-  margin-inline: 10px; 
-  margin-block: 20px 10px;  /* Оступ снизу */
+  margin-inline: 10px;
+  margin-block: 20px 10px; /* Оступ снизу */
   line-height: 23.4px;
 }
 
-.section__text {  
+.section__text {
   margin-inline: 10px;
   font-weight: 400;
-  line-height: 23.4px;  
+  line-height: 23.4px;
 }
 
-.subtitle_recommendation { 
+.subtitle_recommendation {
   margin-inline: 10px;
   margin-block: 20px 10px;
   color: var(--subtitle-main-color);
@@ -203,13 +198,13 @@
 .content__picture {
   display: flex;
   flex-direction: column;
-  gap: 10px; 
+  gap: 10px;
   margin-inline: 10px;
-  margin-block-end: 40px;    
+  margin-block-end: 40px;
 }
 
 .content__picture-image {
-  inline-size: 100%;  
+  inline-size: 100%;
 }
 
 .text_shadow {
@@ -221,16 +216,13 @@
   margin-block-start: 50px;
 }
 
-
 /* ########################################## */
-        /* Блок Main Конец */
-/* ########################################## */
-
-
-/* ########################################## */
-        /* Блок Footer Начало */
+/* Блок Main Конец */
 /* ########################################## */
 
+/* ########################################## */
+/* Блок Footer Начало */
+/* ########################################## */
 
 .footer {
   position: relative;
@@ -242,197 +234,202 @@
 }
 
 .footer_title {
-  color: var(--title-color);  
+  color: var(--title-color);
   font-family: var(--accent-font), sans-serif;
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
-  text-shadow: 2px 2px 0 var(--accent-color);  
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-
 /* ########################################## */
-        /* 3. Блок Footer Конец */
-/* ########################################## */
-
-
-/* ########################################## */
-        /* 4. Медиазапросы */
+/* 3. Блок Footer Конец */
 /* ########################################## */
 
+/* ########################################## */
+/* 4. Медиазапросы */
+/* ########################################## */
 
 @media (width >= 768px) {
-
   .decorated-zone::before {
-   inset-block-start: 20px;
-   inset-inline-end: 20px; 
+    inset-block-start: 20px;
+    inset-inline-end: 20px;
   }
 
   .decorated-zone::after {
-   inset-block-end: 20px;
-   inset-inline-start: 20px; 
+    inset-block-end: 20px;
+    inset-inline-start: 20px;
   }
-  
+
   .header__record_element {
-   inset-block-start: 20px;
-    inset-inline-end: 48px;    
+    inset-block-start: 20px;
+    inset-inline-end: 48px;
   }
-  
+
   .header__record_element::after {
-   inset-block-start: 8px;
+    inset-block-start: 8px;
     inset-inline-end: -19px;
   }
 
   .header__theme-menu-list {
-   margin-inline-end: 10px;
-   margin-block-start: 10px;
-  } 
+    margin-inline-end: 10px;
+    margin-block-start: 10px;
+  }
 
   .header__title {
-   padding-inline-start: 0;
-   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    padding-inline-start: 0;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .header__paragraph { 
-   margin-inline-end: 20px; 
-   margin-block-end: 25px;  
-   max-inline-size: 364px;
+  .header__paragraph {
+    margin-inline-end: 20px;
+    margin-block-end: 25px;
+    max-inline-size: 364px;
   }
-  
+
   .content_section {
-   margin-inline: 20px;
+    margin-inline: 20px;
   }
 
   .section-one {
-   display: grid;
-   grid-template-columns: auto 2fr;   
-   column-gap: 10px;
-   margin-block-start: 60px;          
+    display: grid;
+    grid-template-columns: auto 2fr;
+    column-gap: 10px;
+    margin-block-start: 60px;
   }
 
   .text_card-column {
-   grid-column-start: 2;
+    grid-column-start: 2;
   }
 
-  .content__title {  
-   max-width: 236px;
-   margin-inline-start: 0;
-   margin-block-start: 0;  
+  .content__title {
+    max-width: 236px;
+    margin-inline-start: 0;
+    margin-block-start: 0;
   }
 
   .subtitle {
-   margin-inline: 0;
-   margin-block-start: 0; 
+    margin-inline: 0;
+    margin-block-start: 0;
   }
 
   .section__text {
-   margin-inline: 0;
-   margin-block: 0 20px;
+    margin-inline: 0;
+    margin-block: 0 20px;
   }
 
   .section__title-two {
-   margin-block: 60px 20px;
+    margin-block: 60px 20px;
   }
 
   .section-three {
-   display: grid;
-   grid-template-columns: 1fr 2fr;
-   gap: 20px;  
-   margin-block-start: 80px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    margin-block-start: 80px;
   }
 
   .subtitle_recommendation {
-   margin-inline: 0;
-   margin-block-start: 20px;
+    margin-inline: 0;
+    margin-block-start: 20px;
   }
 
   .section__title-three {
-   margin-inline: 0;
+    margin-inline: 0;
   }
 
-  .section-four {   
-   margin-block-start: 60px;
+  .section-four {
+    margin-block-start: 60px;
   }
 
   .content__picture {
-   display: grid;
-   grid-template-columns: repeat(3, 1fr);
-   grid-template-rows: repeat(3, auto);
-   grid-column-gap: 20px;
-   grid-row-gap: 20px;   
-   margin-inline: 0;
-   margin-block-start: 20px;   
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    margin-inline: 0;
+    margin-block-start: 20px;
   }
 
   .content__picture-image {
-   object-fit: cover;
-   inline-size: 100%;
-   block-size: 100%;  
+    object-fit: cover;
+    inline-size: 100%;
+    block-size: 100%;
   }
 
-  .sunset { grid-area: 1 / 1 / 2 / 3; }
-  .ice-cream { grid-area: 1 / 3 / 3 / 4; }
-  .tape { grid-area: 2 / 1 / 4 / 2; }
-  .books { grid-area: 2 / 2 / 3 / 3; }
-  .street { grid-area: 3 / 2 / 4 / 4; }  
+  .sunset {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+  .ice-cream {
+    grid-area: 1 / 3 / 3 / 4;
+  }
+  .tape {
+    grid-area: 2 / 1 / 4 / 2;
+  }
+  .books {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .street {
+    grid-area: 3 / 2 / 4 / 4;
+  }
 
   .footer {
-   margin-block-start: 60px;
-  }  
+    margin-block-start: 60px;
+  }
 }
 
 @media (width >= 1024px) {
-  
   .header__theme-menu {
-   justify-content: center;
-   align-self: start;
-   margin-block-start: 20px;
+    justify-content: center;
+    align-self: start;
+    margin-block-start: 20px;
   }
 
   .header__theme-menu-list {
-   flex-direction: row;
-   justify-content: center;
-   margin-block-start: 0;
-   padding-inline-start: 10px;
-  } 
+    flex-direction: row;
+    justify-content: center;
+    margin-block-start: 0;
+    padding-inline-start: 10px;
+  }
 
-  .header__paragraph {    
-   margin-block-end: 20px;   
-   max-inline-size: 491px;
+  .header__paragraph {
+    margin-block-end: 20px;
+    max-inline-size: 491px;
   }
 
   .section-one {
-   column-gap: 20px;
-   margin-block-end: 60px;
+    column-gap: 20px;
+    margin-block-end: 60px;
   }
 
-  .text_card-column {    
-   padding-inline-start: 35px;  
+  .text_card-column {
+    padding-inline-start: 35px;
   }
 
-  .content__title {    
-   margin-block-start: 0; 
-   max-inline-size: 315px;
+  .content__title {
+    margin-block-start: 0;
+    max-inline-size: 315px;
   }
 
   .section__title-one {
-   margin-inline-end: 0;
+    margin-inline-end: 0;
   }
 
   .text_card-column-two {
-   display: grid;  
-   grid-template-columns: repeat(3, 1fr);   
-   grid-auto-columns: 1fr;
-   gap: 20px;
-   margin-block-start: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-columns: 1fr;
+    gap: 20px;
+    margin-block-start: 20px;
   }
-  
-  .section-three {   
-   gap: 10px;  
-   margin-block-start: 60px;
+
+  .section-three {
+    gap: 10px;
+    margin-block-start: 60px;
   }
 
   .footer_title {
-   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
